src/rules/flake8_implicit_str_concat/snapshots/ruff__flake8_implicit_str_concat__tests__ISC001_ISC.py.snap
---
source: src/flake8_implicit_str_concat/mod.rs
expression: checks
---
- kind:
    SingleLineImplicitStringConcatenation: ~
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 11
  fix: ~
  parent: ~
- kind:
    SingleLineImplicitStringConcatenation: ~
  location:
    row: 1
    column: 8
  end_location:
    row: 1
    column: 15
  fix: ~
  parent: ~

