src/rules/flake8_implicit_str_concat/snapshots/ruff__flake8_implicit_str_concat__tests__ISC002_ISC.py.snap
---
source: src/flake8_implicit_str_concat/mod.rs
expression: checks
---
- kind:
    MultiLineImplicitStringConcatenation: ~
  location:
    row: 5
    column: 4
  end_location:
    row: 6
    column: 9
  fix: ~
  parent: ~

